<resources>
    <string name="app_name">uStart</string>

    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="welcome">Welcome</string>
    <string name="verification">Verification Code</string>
    <string name="sign_in_text">Sign in and Continue to uStart</string>
    <string name="verification_code_text">Please fill here Using Your Code?</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="enter_password">Enter Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_passowrd">Confirm Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="Back_to">Back to </string>
    <string name="login">Login</string>

    <string name="forgot_password_title">Did someone forgot their password?</string>
    <string name="thats_ok">"That's ok..."</string>
    <string name="forgot_password_text">"Just enter the email address you've used to register with us and we will send you a reset link!"</string>

    <string name="reset_your_password">Reset Your Password?</string>
    <string name="reset_your_password_title">Please Enter New Password and Continue and \nafter that login to uStart</string>
    <string name="textview">TextView</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="username">User Name</string>
    <string name="usertype">(User Type)</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="joineddate">Joined Date</string>
    <string name="logout">Log Out</string>


    <string name="current_password_title">Did you want change your password?</string>
    <string name="current_password_text">"Just enter the current password you've used to login with us and continue,after that You can enter new password!"</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="Update_your_password">Update Your Password?</string>
    <string name="update_password">Update Password</string>
</resources>
