<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:baselineAligned="false"
    tools:context=".VerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="left"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:paddingTop="90dp">
        </ImageView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="30dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verification"
            android:textSize="30dp"
            android:textColor="@color/logo_blue"
            app:fontFamily="@font/raleway_semibold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verification_code_text"
            android:textColor="@color/url"
            app:fontFamily="@font/raleway_light" />



        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_verification_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/verification_code"
                android:maxLength="6"
                android:gravity="center"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>







        <com.google.android.material.button.MaterialButton
            android:id="@+id/Submit_verification_code"
            android:clickable="true"
            android:background="@color/logo_blue"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="@string/submit"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:paddingTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="Back to "
                android:textAlignment="center"

                app:fontFamily="@font/raleway_light" />

            <TextView
                android:id="@+id/btnBack_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/logo_blue"
                android:text=" Forgot Password"
                app:fontFamily="@font/raleway_medium" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:textAlignment="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="CreatX "
                android:textAlignment="center"
                android:textColor="@color/creatX"

                app:fontFamily="@font/raleway_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/software"
                android:text="Software"
                app:fontFamily="@font/raleway_light" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/url"
            android:text="www.creatxsoftware.com"
            app:fontFamily="@font/raleway_light" />

    </LinearLayout>



</LinearLayout>